@startuml
'https://plantuml.com/class-diagram

abstract class Game{
+ heroAircraft:HeroAircraft
}
class HeroAircraft {
    # maxHp:int
    # hp:int
    - shootNum:int
    - power:int
    - direction:int
    - myHero:HeroAircraft
    - shootStrategy:AbstractShootStrategy
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum, int power)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum, int Aircraft
    + forward():void
    + shoot():List<Bullet>
    + setStrategy(AbstractShootStrategy shootStrategy):void
    + update(Game mg):void
}
Game-->HeroAircraft
Interface AbstractShootStrategy {
    + shoot():List<Bullet>
}
HeroAircraft o--> AbstractShootStrategy

class LinearShootStrategy implements AbstractShootStrategy {
    + shoot():List<Bullet>
}
class SpreadShootStrategy implements AbstractShootStrategy {
    + shoot():List<Bullet>
}


@enduml